New minor version 0.9.0-beta - calcexpval + probatree

--- a/factory/01-general/03-exp-val-n-co[fr].tex
+++ b/factory/01-general/03-exp-val-n-co[fr].tex
@@ -27,8 +27,11 @@ $\expval{X}$
 
 \newparaexample{Choisir le nom de l'espérance}
 
+Notez l'utilisation de \macro{mathrm} pour obtenir une lettre droite comme cela est l'usage.
+
 \begin{latexex}
-$\expval[E_1]{X}$
+$\expval[E_1]{X}$ ou
+$\expval[\mathrm{E}_1]{X}$
 \end{latexex}
 
 
@@ -39,7 +42,8 @@ $\expval[E_1]{X}$
 
 \begin{latexex}
 $\var   {X}$ ou
-$\var[v]{X}$
+$\var[v]{X}$ ou
+$\var[\mathrm{v}]{X}$
 \end{latexex}
 
 
@@ -49,9 +53,11 @@ $\var[v]{X}$
 \newparaexample{Écart-type}
 
 \macro{stddev} vient de \whyprefix{st}{andar-}\prefix{d} \whyprefix{dev}{iation} soit \inenglish{écart-type}.
+
 \begin{latexex}
 $\stddev   {X}$ ou
-$\stddev[s]{X}$
+$\stddev[s]{X}$ ou
+$\stddev[\mathrm{s}]{X}$
 \end{latexex}
 
 
