--- a/factory/99-major-change-log/changes/2020/09-02.tex
+++ b/factory/99-major-change-log/changes/2020/09-02.tex
@@ -1,8 +1,8 @@
 Nouvelle version mineure \verb+0.9.0-beta+.
 
 \begin{itemize}[itemsep=.5em]
-    \item \topic*{Calculs de l'espérance dans le cas discret fini}
-    	  \macro{calcexpval} rend facile la définition d'une variable aléatoire discrète fini avec en la possibilité de détailler le calcul de son espérance.
+    \item \topic*{Calculs de l'espérance dans le cas fini}
+    	  \macro{calcexpval} rend facile la définition d'une variable aléatoire finie avec la possibilité de détailler le calcul de son espérance.
 
 
 % ---------------------- %
