--- a/factory/01-general/01-general[fr].tex
+++ b/factory/01-general/01-general[fr].tex
@@ -27,7 +27,7 @@ $\proba{A}$
 \newparaexample{Choisir le nom de la probabilité}
 
 \begin{latexex}
-$\proba[P]{A}$
+$\proba[p]{A}$
 \end{latexex}
 
 
@@ -38,7 +38,7 @@ $\proba[P]{A}$
 
 \IDmacro{proba}{1}{1}
 
-\IDoption{} le nom de la probabilité. La valeur par défaut est $p$.
+\IDoption{} le nom de la probabilité. La valeur par défaut est \verb#P#.
 
 \IDarg{} l'ensemble dont on veut calculer la probabilité.
 
@@ -79,10 +79,10 @@ Le préfixe \prefix{e} est pour \whyprefix{e}{xpand} soit \inenglish{développer
 \newparaexample{Choisir le nom de la probabilité}
 
 \begin{latexex}
- $\probacond  [P]{B}{A}
-= \probacond* [P]{B}{A}
-= \eprobacond*[P]{B}{A}
-= \eprobacond [P]{B}{A}$
+ $\probacond  [p]{B}{A}
+= \probacond* [p]{B}{A}
+= \eprobacond*[p]{B}{A}
+= \eprobacond [p]{B}{A}$
 \end{latexex}
 
 
@@ -102,7 +102,7 @@ Le préfixe \prefix{e} est pour \whyprefix{e}{xpand} soit \inenglish{développer
 \IDmacro{eprobacond*}{1}{2}
 
 
-\IDoption{} le nom de la probabilité. La valeur par défaut est $p$.
+\IDoption{} le nom de la probabilité. La valeur par défaut est \verb#P#.
 
 \IDarg{1} l'ensemble qui donne la condition.
 
