--- a/factory/02-table/01-4-calculate-expval-technical[fr].tex
+++ b/factory/02-table/01-4-calculate-expval-technical[fr].tex
@@ -46,25 +46,25 @@
 
     \medskip
 
-    \item \verb#E # : le nom de l'espérance.
+    \item \verb#E # : la macro utilisée pour écrire l'espérance.
 		  \hfill
-		  Par défaut \verb# E = E# .
+		  Par défaut \verb# E = \expval# .
 
     \item \verb#X # : le nom de la variable aléatoire.
 		  \hfill
-		  Par défaut \verb# X = X# .
+		  Par défaut \verb# X = X# .\verb#      #
 
     \item \verb#k # : l'indice.
 		  \hfill
-		  Par défaut \verb# k = k# .
+		  Par défaut \verb# k = k# .\verb#      #
 
     \item \verb#xk# : la lettre à indicer pour les valeurs de la variable aléatoire.
 		  \hfill
-		  Par défaut \verb#xk = x# .
+		  Par défaut \verb#xk = x# .\verb#      #
 
     \item \verb#pk# : la lettre à indicer pour les valeurs des probabilités.
 		  \hfill
-		  Par défaut \verb#pk = p# .
+		  Par défaut \verb#pk = p# .\verb#      #
 
 
     \medskip
