--- a/factory/99-major-change-log/01-change-log[fr].tex
+++ b/factory/99-major-change-log/01-change-log[fr].tex
@@ -22,6 +22,37 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 % Changes shown - START
 
     \medskip
+    \item[2020-09-03] Nouvelle version mineure \verb+0.10.0-beta+.
+    
+    \begin{itemize}[itemsep=.5em]
+        \item \topic{Généralités}
+    
+        \begin{itemize}[itemsep=.5em]
+            \item $\mathrm{P}$ est le nom par défaut d'une probabilité.
+    
+    		\item Les noms des probabilités, des espérances, des variances et des écarts-types utilisent tous une police droite via \macro{mathrm} en coulisse.
+        \end{itemize}
+    
+    
+    % ---------------------- %
+    
+    
+        \item \topic{Espérance d'une variable aléatoire finie}
+    
+        \begin{itemize}[itemsep=.5em]
+            \item \macro{expval} est utilisée en coulisse pour rédiger les espérances dans les détails des calculs.
+            
+    		\item L'ordre des produits dans le calcul numérique est le même que celui dans la somme formelle.
+        \end{itemize}
+    \end{itemize}
+    
+    
+    \separation
+    
+
+% ------------------------ %
+
+    \medskip
     \item[2020-09-02] Nouvelle version mineure \verb+0.9.0-beta+.
     
     \begin{itemize}[itemsep=.5em]
