--- a/factory/01-general/03-exp-val-n-co[fr].tex
+++ b/factory/01-general/03-exp-val-n-co[fr].tex
@@ -27,11 +27,8 @@ $\expval{X}$
 
 \newparaexample{Choisir le nom de l'espérance}
 
-Notez l'utilisation de \macro{mathrm} pour obtenir une lettre droite comme cela est l'usage.
-
 \begin{latexex}
-$\expval[E_1]{X}$ ou
-$\expval[\mathrm{E}_1]{X}$
+$\expval[E_1]{X}$
 \end{latexex}
 
 
@@ -40,10 +37,12 @@ $\expval[\mathrm{E}_1]{X}$
 
 \newparaexample{Variance}
 
+Notez la possibilité d'utiliser \macro{mathit} pour obtenir des lettres en italique.
+
 \begin{latexex}
 $\var   {X}$ ou
 $\var[v]{X}$ ou
-$\var[\mathrm{v}]{X}$
+$\var[\mathit{v}]{X}$
 \end{latexex}
 
 
@@ -57,7 +56,7 @@ $\var[\mathrm{v}]{X}$
 \begin{latexex}
 $\stddev   {X}$ ou
 $\stddev[s]{X}$ ou
-$\stddev[\mathrm{s}]{X}$
+$\stddev[\mathit{s}]{X}$
 \end{latexex}
 
 
@@ -68,7 +67,7 @@ $\stddev[\mathrm{s}]{X}$
 
 \IDmacro{expval}{1}{1}
 
-\IDoption{} le nom de la fonction espérance. La valeur par défaut est $\mathrm{E}$ obtenue via \verb#\mathrm{E}#.
+\IDoption{} le nom de la fonction espérance. valeur par défaut est \verb#E#.
 
 \IDarg{} la variable aléatoire dont on veut calculer l'espérance.
 
@@ -78,7 +77,7 @@ $\stddev[\mathrm{s}]{X}$
 
 \IDmacro{var}{1}{1}
 
-\IDoption{} le nom de la fonction variance. La valeur par défaut est $\mathrm{V}$ obtenue via \verb#\mathrm{V}#.
+\IDoption{} le nom de la fonction variance. valeur par défaut est \verb#V#.
 
 \IDarg{} la variable aléatoire dont on veut calculer la variance.
 
@@ -88,7 +87,7 @@ $\stddev[\mathrm{s}]{X}$
 
 \IDmacro{stddev}{1}{1}
 
-\IDoption{} le nom de la fonction écart-type. La valeur par défaut est $\sigma$ obtenue via \verb#\sigma#.
+\IDoption{} le nom de la fonction écart-type. La valeur par défaut est \verb#\sigma#.
 
 \IDarg{} la variable aléatoire dont on veut calculer l'écart-type.
 
