--- a/tnsproba/tnsproba.sty
+++ b/tnsproba/tnsproba.sty
@@ -16,8 +16,8 @@
 
 % TikZ libraries
 \usetikzlibrary{fit}
-\usetikzlibrary{babel}
 \usetikzlibrary{calc}
+\usetikzlibrary{babel}
 
 
 % ------------- %
@@ -26,15 +26,16 @@
 
 % -- Semantic probability -- %
 
-\newcommand\proba[2][p]{%
+\newcommand\proba[2][P]{%
+	\def\name{\mathrm{#1}}%
     \mathchoice{% * Display style
-        #1\mskip-.65\medmuskip\left( #2 \right)%
+        \name{}\mskip-.65\medmuskip\left( #2 \right)%
     }{%           * Text style
-        #1\mskip-.65\medmuskip\left( #2 \right)%
+        \name{}\mskip-.65\medmuskip\left( #2 \right)%
     }{%           * Script style
-        #1\left( #2 \right)%
+        \name{}\left( #2 \right)%
     }{%           * Script script style
-        #1\left( #2 \right)%
+        \name{}\left( #2 \right)%
     }
 }
 
@@ -49,22 +50,22 @@
 
 \newcommand\probacond{\@ifstar{\tnsproba@proba@cond@star}{\tnsproba@proba@cond@no@star}}
 
-\newcommand\tnsproba@proba@cond@no@star[3][p]{%
+\newcommand\tnsproba@proba@cond@no@star[3][P]{%
     \proba[#1_{#2}]{#3}%
 }
 
-\newcommand\tnsproba@proba@cond@star[3][p]{%
+\newcommand\tnsproba@proba@cond@star[3][P]{%
     \proba[#1]{#3 \mid #2}%
 }
 
 
 \newcommand\eprobacond{\@ifstar{\tnsproba@proba@cond@exp@star}{\tnsproba@proba@cond@exp@no@star}}
 
-\newcommand\tnsproba@proba@cond@exp@star[3][p]{%
+\newcommand\tnsproba@proba@cond@exp@star[3][P]{%
     \tnsproba@abstract@proba@cond{\frac}{#1}{#3}{#2}
 }
 
-\newcommand\tnsproba@proba@cond@exp@no@star[3][p]{%
+\newcommand\tnsproba@proba@cond@exp@no@star[3][P]{%
     \tnsproba@abstract@proba@cond{\dfrac}{#1}{#3}{#2}
 }
 
@@ -80,11 +81,11 @@
 
 % -- Expected value - Variance - Standard deviation -- %
 
-\newcommand\expval[2][\mathrm{E}]{%
+\newcommand\expval[2][E]{%
     \proba[#1]{#2}%
 }
 
-\newcommand\var[2][\mathrm{V}]{%
+\newcommand\var[2][V]{%
     \proba[#1]{#2}%
 }
 
@@ -550,7 +551,7 @@
         \iftnsproba@expval@key@Expval@show@formal
             $%
                 \iftnsproba@expval@key@Expval@show@exp
-                    \tnsproba@expval@key@E{}(\tnsproba@expval@key@X{}) = 
+                    \expval[\tnsproba@expval@key@E{}]{\tnsproba@expval@key@X{}} = 
                 \fi
                 %
                 \sum\limits%
@@ -576,7 +577,7 @@
 
             $%
                 \iftnsproba@expval@key@Expval@show@exp
-                    \tnsproba@expval@key@E{}(\tnsproba@expval@key@X{}) = 
+                    \expval[\tnsproba@expval@key@E{}]{\tnsproba@expval@key@X{}} = 
                 \fi
                 %
                  \seq_map_indexed_inline:Nn \l__tnsproba_x_seq {
@@ -590,14 +591,14 @@
                                               \l__tnsproba_actual_color_temp_tl
                     
                             \decotext[\l__tnsproba_actual_color_temp_tl]{%
-                                ##2%
-                                \tnsproba@expval@key@ope{}%
                                 \l__tnsproba_pval_tl%
+                                \tnsproba@expval@key@ope{}%
+                                ##2%
                             }
                         }{ % The num. of the col. is even.
-                            ##2
-                            \tnsproba@expval@key@ope{}%
                             \l__tnsproba_pval_tl
+                            \tnsproba@expval@key@ope{}%
+                            ##2
                         }
             
                     \int_compare:nNnT { ##1 } < { \seq_count:N \l__tnsproba_x_seq }
